re colored the whole page

--- a/Technical Documentation Page.html
+++ b/Technical Documentation Page.html
@@ -3,6 +3,7 @@
     <head>
         <title>Technical Documentation Page</title>
         <link rel="stylesheet" href="Technical Documentation Page.css">
+        <link rel="icon shortcut" href="./icons/js.png">
     </head>
     <body>
         <nav id="navbar">
@@ -24,6 +25,8 @@
                 <li><a class="nav-link" href="#Reference">Reference</a></li>
             </ul>
         </nav>
+    </header>
+    <body>
         <main id="main-doc">
             <section class="main-section" id="Introduction">
                 <header class="section-header">Introduction</header>
